$2030 Safari scrollbar fix

--- a/entrypoints/popup/Popup.module.scss
+++ b/entrypoints/popup/Popup.module.scss
@@ -94,6 +94,17 @@
     }
   }
 
+  &:global(.safari) {
+    *::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+
+    *::-webkit-scrollbar-thumb {
+      background-clip: padding-box;
+      border-right: 1px solid transparent;
+    }
+  }
+
   &.pass-blocked {
     height: 137px;
 
